Bug 66168 - Black areas for windows > 8k px [SNA]
Summary: Black areas for windows > 8k px [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-25 17:52 UTC by Clemens Eisserer
Modified: 2013-06-26 11:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clemens Eisserer 2013-06-25 17:52:19 UTC
Resizing applications so that their width exceeds 8192 px results in black areas.
Tested on my SNB Laptop and XFCE without a composition manager.

The application which showed this behaviour is Thunar file manager (1.6.3) using the mist gtk2-theme.

This has absolutely no priority for me, just thought reporting it doesn't hurt.
Comment 1 Chris Wilson 2013-06-25 18:18:47 UTC
We had this working not too long ago, what have I broken now?
Comment 2 Chris Wilson 2013-06-25 20:28:52 UTC
Hmm, bisects to

fd375da5caf34f93a4e87670bb0c70fec5b4c55c is the first bad commit
commit fd375da5caf34f93a4e87670bb0c70fec5b4c55c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Jun 23 17:06:11 2013 +0100

    sna: Allow tiled uploads to accumulate damage
    
    And for the upload to create the bo as required.
Comment 3 Chris Wilson 2013-06-26 09:30:04 UTC
Bisect was for ilk, appears to be a different issue on snb.
Comment 4 Chris Wilson 2013-06-26 11:09:08 UTC
commit 362b0dc6a3b1692b752d8f250075ccc81debfca3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jun 26 12:04:46 2013 +0100

    sna/gen4+: Fix determination of intermediate extents
    
    Complete logic fail for finding the bounding box of the boxes to be
    copied.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66168
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.