sna/gen4+: Fix determination of intermediate extents

Complete logic fail for finding the bounding box of the boxes to be
copied.

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66168
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>